src/objects/NCP_Service_Contract_Team__c.object
<CustomObject>
    <fields>
        <fullName>NCP_External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCP_Service_Contract_Id__c</fullName>
        <label>Service Contract Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ServiceContract.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>NCP_Parent_Service_Contract</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Service Contract Team</relationshipLabel>
        <relationshipName>Service_Contract_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NCP_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Team_Member_Role__c</fullName>
        <label>Team Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAPM</fullName>
                    <default>true</default>
                    <label>CAPM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCP_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Contract_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Contract Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCT-{0000}</displayFormat>
        <label>Service Contract Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>